# my_health

./: .bedrock_agentcore.yaml  .dockerignore  .gitignore  deploy.sh  launch.sh  proxy.py  pyproject.toml  requirements.txt
.claude/: settings.json
app/: __init__.py  config.py  main.py
app/agents/consult/: agent.py
app/agents/dashboard/: agent.py
app/agents/dashboard/tools/: chart_tools.py  streak_board_tools.py  summary_tools.py
app/agents/fitness/: agent.py
app/agents/fitness/tools/: calorie_tools.py  workout_tools.py
app/agents/intake/: agent.py
app/agents/intake/tools/: constraint_tools.py  goal_tools.py  history_tools.py
app/agents/lifestyle/: agent.py
app/agents/lifestyle/tools/: body_assessment_tools.py  plan_doc_tools.py  plan_state_tools.py  vitals_tools.py
app/agents/motivation/: agent.py
app/agents/motivation/tools/: nudge_tools.py  streak_tools.py
app/agents/nutrition/: agent.py
app/agents/nutrition/tools/: diet_tools.py  meal_tools.py  nutrition_tools.py  water_tools.py
app/agents/orchestrator/: agent.py  nutrition_fastpath.py  streaming.py
app/agents/orchestrator/planning/: dispatcher.py  executor.py  planner.py  registry.py  schemas.py  synthesizer.py
app/agents/orchestrator/tools/: __init__.py  (+2 more)
app/agents/physician/: agent.py
app/agents/progress/: agent.py
app/api/routes/: agentcore.py  chat.py  sessions.py
app/core/: chat_store.py  db.py  llm.py  s3.py  streaming.py
app/models/: chat.py
app/observability/: __init__.py  config.py  context.py  decorators.py
app/shared/tools/: web_search.py
app/status_events/: __init__.py  _perf_trace.py  emitter.py
app/vision/: processor.py  schemas.py
config/: agent_goals.yaml  config.yaml  prompt_templates.yaml
deploy/: Dockerfile.template  setup_cognito.sh
deploy/lambda/: app.py  deploy_lambda.sh  requirements.txt
deploy/lambda/.build/: handler.py
(+5 files in other folders)
