[project]
name = "healthpulse-ai"
version = "0.1.0"
description = "HealthPulse AI - Personal health companion backend"
requires-python = ">=3.11"
dependencies = [
    "fastapi==0.115.5",
    "uvicorn[standard]==0.32.1",
    "openai==1.57.0",
    "anthropic==0.40.0",
    "pydantic==2.10.3",
    "pydantic-settings==2.6.1",
    "python-dotenv==1.0.1",
    "langchain==0.3.9",
    "langchain-openai==0.2.10",
    "langchain-anthropic==0.3.1",
    "langgraph==0.2.59",
    "langchain-community==0.3.9",
    "httpx==0.28.1",
]
