[project]
name = "healthpulse-ai"
version = "0.1.0"
description = "HealthPulse AI - Personal health companion backend"
requires-python = ">=3.11"
dependencies = [
    "fastapi==0.115.5",
    "uvicorn[standard]==0.32.1",
    "openai==1.57.0",
    "anthropic==0.41.0",
    "pydantic>=2.11.9",
    "pydantic-settings>=2.10.1",
    "python-dotenv>=1.1.1",
    "pyyaml==6.0.2",
    "crewai==1.6.1",
    "httpx==0.28.1",
    "boto3>=1.39.0",
]

